Toggle blurry class correct finally

--- a/src/App.css
+++ b/src/App.css
@@ -296,3 +296,7 @@ p{
             border: 1px solid red;
             box-sizing: border-box;
         }
+
+        .game_item_inactive{
+            filter: blur(4px);
+        }
